--- a/test-output/SparkReport/Index.html
+++ b/test-output/SparkReport/Index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 13, 2022 12:26:39 am</span></a>
+<a href="#"><span class="badge badge-primary">May 13, 2022 03:39:18 pm</span></a>
 </li>
 </ul>
 </div>
@@ -66,13 +66,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 13, 2022 12:26:39 am</h3>
+<h3>May 13, 2022 03:39:18 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 13, 2022 12:27:24 am</h3>
+<h3>May 13, 2022 03:39:39 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login page feature":42.774,"Account Page Feature":44.058
+"Login page feature":18.46,"Account Page Feature":19.097
 };
 </script>
 <div class="row">
@@ -172,7 +172,7 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@accounts</td>
+<td>@Regression</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -180,7 +180,7 @@ var timeline = {
 <td>100%</td>
 </tr>
 <tr>
-<td>@Regression</td>
+<td>@accounts</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
@@ -258,7 +258,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@accounts</a><a class="dropdown-item" href="#">@Regression</a>
+<a class="dropdown-item" href="#">@Regression</a><a class="dropdown-item" href="#">@accounts</a>
 </ul>
 </li>
 </ul>
@@ -271,7 +271,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">Login page feature</p>
             <p class="text-sm">
-              <span>00:26:40 am</span> / <span>00:00:42:774</span>
+              <span>15:39:20 pm</span> / <span>00:00:18:460</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -280,9 +280,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login page feature</h5>
-<span class='badge badge-success'>05.13.2022 00:26:40</span>
-<span class='badge badge-danger'>05.13.2022 00:27:23</span>
-<span class='badge badge-default'>00:00:42:774</span>
+<span class='badge badge-success'>05.13.2022 15:39:20</span>
+<span class='badge badge-danger'>05.13.2022 15:39:38</span>
+<span class='badge badge-default'>00:00:18:460</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 </div>
 <div class="m-t-10 m-l-5"></div>
@@ -313,33 +313,7 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="3"><span class="badge log pass-bg mr-2">Pass</span>Login page title</div>
-      </div>
-    </div>
-        <div class="collapse">
-          <div class="card-body">
-              <div class="step pass-bg" title="Parallel.loginSteps.user_is_on_login_page()">
-                <span>Given user is on login page</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="Parallel.loginSteps.user_gets_the_title_of_the_page()">
-                <span>When user gets the title of the page</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="Parallel.loginSteps.page_title_should_be(java.lang.String)">
-                <span>Then page title should be "Login - My Store"</span>
-      <div>
-      </div>
-              </div>
-          </div>
-        </div>
-  </div>
-  <div class="card">
-    <div class="card-header" role="tab">
-      <div class="card-title">
-        <div class="node" id="4"><span class="badge log pass-bg mr-2">Pass</span>Login with correct credentials</div>
+        <div class="node" id="5"><span class="badge log pass-bg mr-2">Pass</span>Login with correct credentials</div>
       </div>
     </div>
         <div class="collapse">
@@ -377,17 +351,43 @@ eventsCount: 5,
           </div>
         </div>
   </div>
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="6"><span class="badge log pass-bg mr-2">Pass</span>Login page title</div>
+      </div>
+    </div>
+        <div class="collapse">
+          <div class="card-body">
+              <div class="step pass-bg" title="Parallel.loginSteps.user_is_on_login_page()">
+                <span>Given user is on login page</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="Parallel.loginSteps.user_gets_the_title_of_the_page()">
+                <span>When user gets the title of the page</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="Parallel.loginSteps.page_title_should_be(java.lang.String)">
+                <span>Then page title should be "Login - My Store"</span>
+      <div>
+      </div>
+              </div>
+          </div>
+        </div>
+  </div>
 </div>
           </div>
         </li>
-        <li class="test-item"  status="pass" test-id="5"
+        <li class="test-item"  status="pass" test-id="3"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">Account Page Feature</p>
             <p class="text-sm">
-              <span>00:26:40 am</span> / <span>00:00:44:058</span>
+              <span>15:39:20 pm</span> / <span>00:00:19:097</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -396,10 +396,10 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Account Page Feature</h5>
-<span class='badge badge-success'>05.13.2022 00:26:40</span>
-<span class='badge badge-danger'>05.13.2022 00:27:24</span>
-<span class='badge badge-default'>00:00:44:058</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
+<span class='badge badge-success'>05.13.2022 15:39:20</span>
+<span class='badge badge-danger'>05.13.2022 15:39:39</span>
+<span class='badge badge-default'>00:00:19:097</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 </div>
 <div class="m-t-10 m-l-5"></div>
 </div>
@@ -408,7 +408,7 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="6"><span class="badge log pass-bg mr-2">Pass</span>Accounts page title</div>
+        <div class="node" id="4"><span class="badge log pass-bg mr-2">Pass</span>Accounts page title</div>
       </div>
     </div>
         <div class="collapse">
@@ -463,42 +463,6 @@ eventsCount: 5,
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@accounts</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>@accounts</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>00:26:40 am</td>
-<td>
-<a href="#" class="linked" test-id='5' id='6'>Accounts page title</a>
-<div class="">
-<span class="badge badge-default">Account Page Feature.Accounts page title</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log pass-bg'>1</span>
-</span>
 <p class="name">@Regression</p>
 <p class="duration text-sm">1 tests</p>
 </div>
@@ -518,9 +482,45 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>00:26:40 am</td>
+<td>15:39:20 pm</td>
 <td>
-<a href="#" class="linked" test-id='5' id='6'>Accounts page title</a>
+<a href="#" class="linked" test-id='3' id='4'>Accounts page title</a>
+<div class="">
+<span class="badge badge-default">Account Page Feature.Accounts page title</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>1</span>
+</span>
+<p class="name">@accounts</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>@accounts</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>15:39:20 pm</td>
+<td>
+<a href="#" class="linked" test-id='3' id='4'>Accounts page title</a>
 <div class="">
 <span class="badge badge-default">Account Page Feature.Accounts page title</span>
 </div>
